--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <article>
       <ul class="teco">
         <li class="teco2-item">
-          <img src="/img/eletrica.svg" alt="">
+          <img src="img/eletrica.svg" alt="">
           <h4>Motor Elétrico</h4></a>
           <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
         </li>
         <li class="teco2-item">
-          <img src="/img/rastreador.svg" alt="">
+          <img src="img/rastreador.svg" alt="">
           <h4>40 km/h</h4></a>
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
         </li>
