--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
-  <link rel="icon" href="/img/bicicleta.png">
+  <link rel="icon" href="img/bike-svgrepo-com.svg">
   <title>Bike</title>
 </head>
 
@@ -57,7 +57,7 @@
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
         </li>
         <li class="teco2-item">
-          <img src="/img/velocidade.svg" alt="">
+          <img src="img/velocidade.svg" alt="">
           <h4>Rastreador</h4> </a>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </li>
